[tool.poetry]
name = "wp-get-page-list"
version = "0.1.0"
description = ""
authors = ["Brett Kelly <brett@brettkelly.org>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
